--- a/css/mycss.css
+++ b/css/mycss.css
@@ -601,8 +601,7 @@ nav .flex-container {
     z-index:1000;
 }
 
-.about-details-rect {
-    margin:0 auto;
+.about-details-box {
     width:40vw;
     height:40vw;
     box-sizing:border-box;
@@ -656,9 +655,9 @@ nav .flex-container {
 
 
 
-.about-details p {
+.about-details-box p {
 
-    font-size:1.2vw;
+    font-size:1.35vw;
     margin:5%;
     margin-right:5%;
     text-align: center;
@@ -1259,28 +1258,18 @@ footer .section-header {
         left:37.5%;
     }
     
-    .about-details-rect {
+    .about-details-box {
         width:80vw;
         height:80vw;
     }
 
     .about-details p {
-        font-size:2vw;
+        font-size:2.5vw;
     }
     .about-details-icon {
         font-size:6vw;
     }
     
-    #about2-details{
-        margin-top:30vw;
-    }
-     #about3-details{
-        margin-top:60vw;
-    }
-     #about4-details{
-        margin-top:90vw;
-    }
-
 
 
     svg .skill-header{
@@ -1424,37 +1413,19 @@ footer .section-header {
         width:90%;
     }
  
-  /*  
-    .about-details {
-        display:none;
-        position:absolute;
-        top:0;
-        width:100%;
-        height:75%;
-    }*/
-    
-    .about-details-rect {
+
+    .about-details-box {
         width:90vw;
         height:100vw;
     }
 
     .about-details p {
-        font-size:4vw;
+        font-size:3vw;
     }
     .about-details-icon {
         font-size:8vw;
     }
     
-    #about2-details{
-        margin-top:45vw;
-    }
-     #about3-details{
-        margin-top:90vw;
-    }
-     #about4-details{
-        margin-top:135vw;
-    }
-
 
 
     svg .skill-header{
