fixing mozzilla line height problem and page scroll when modal closed by click outside modal window

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -145,7 +145,7 @@ section .flex-container {
 .section-header h2 { 
     text-align:center;
     font-weight: 900;
-    line-height: 0.8em;
+    margin-bottom:-2.5vw;
 }
 
 
