--- a/css/mycss.css
+++ b/css/mycss.css
@@ -31,6 +31,7 @@ p, ul, ol {
     font-family: 'Source Code Pro', monospace;
     color:#1C1B20;
     color:#000000;
+    line-height: 1.3em;
 }
 
 p {
