--- a/css/mycss.css
+++ b/css/mycss.css
@@ -32,6 +32,8 @@ p, ul, ol {
     color:#1C1B20;
     color:#000000;
     line-height: 1.3em;
+    margin-top:1em;
+    margin-bottom:1em;
 }
 
 p {
@@ -43,6 +45,7 @@ h1, h2, h3, h4, h5 {
     font-weight: 800;
     margin:0;
     color:#1C1B20;
+    line-height: 1.4em;
 }
 
 h1 {
