--- a/sass/partials/_about.scss
+++ b/sass/partials/_about.scss
@@ -118,7 +118,7 @@
 
 .bikebox {
    @extend %striped-cover;
-   @extend %shadow;
+   box-shadow: $shadow;
    position: absolute;
    top: 37.5%;
    left: 75%;
